--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "ajax": "^0.0.4",
-    "next": "14.2.4",
+    "next": "^15.3.1",
     "nodemailer": "^6.9.14",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
