--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "^15.3.1",
     "nodemailer": "^6.9.14",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "eslint": "^8",
