--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "ajax": "^0.0.4",
+    "framer-motion": "^12.19.1",
+    "lucide-react": "^0.522.0",
     "next": "^15.3.1",
     "nodemailer": "^6.9.14",
+    "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
